fix code snippets to be visible

--- a/docs/_assets/scss/custom.scss
+++ b/docs/_assets/scss/custom.scss
@@ -96,6 +96,13 @@ pre {
   font-weight: bold;
 }
 
+#source-modal {
+  pre {
+    background-color: rgba(0,0,0,0.7);
+    color: rgba(255,255,255,0.7);
+  }
+}
+
 .nav-tabs {
   margin-bottom: 15px;
 }
